--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "npm": "^10.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.1",
     "remixicon": "^4.1.0",
