--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "bootstrap": "^5.3.2",
     "npm": "^10.3.0",
     "react": "^18.2.0",
+    "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.14.1",
     "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
     "reactstrap": "^9.2.1",
     "remixicon": "^4.1.0",
     "slick-carousel": "^1.8.1",
