--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
+    "history": "^5.3.0",
     "npm": "^10.3.0",
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
