--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
+    "concurrently": "^8.2.2",
+    "express": "^4.18.2",
     "history": "^5.3.0",
+    "mongoose": "^8.1.0",
+    "morgan": "^1.10.0",
     "npm": "^10.3.0",
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
