--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
     "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "history": "^5.3.0",
     "mongoose": "^8.1.0",
