--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "firebase": "^10.7.2",
     "history": "^5.3.0",
     "mongoose": "^8.1.0",
     "morgan": "^1.10.0",
