--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@material-tailwind/react": "^2.1.8",
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
     "@mui/styled-engine": "^5.15.6",
@@ -30,6 +31,7 @@
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-tailwind": "^0.0.0",
     "reactstrap": "^9.2.1",
     "remixicon": "^4.1.0",
     "slick-carousel": "^1.8.1",
