--- a/package.json
+++ b/package.json
@@ -8,17 +8,21 @@
     "@emotion/styled": "^11.11.0",
     "@material-tailwind/react": "^2.1.8",
     "@mui/icons-material": "^5.15.6",
-    "@mui/material": "^5.15.6",
+    "@mui/material": "^5.15.10",
     "@mui/styled-engine": "^5.15.6",
+    "@mui/x-data-grid": "^6.19.4",
     "@react-pdf/renderer": "^3.3.8",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
+    "browserify-zlib": "^0.2.0",
     "chart.js": "^4.4.1",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
     "express": "^4.18.2",
     "firebase": "^10.7.2",
     "history": "^5.3.0",
@@ -26,6 +30,10 @@
     "mongoose": "^8.1.0",
     "morgan": "^1.10.0",
     "npm": "^10.3.0",
+    "path": "^0.12.7",
+    "path-browserify": "^1.0.1",
+    "querystring": "^0.2.1",
+    "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.0",
@@ -40,7 +48,8 @@
     "reactstrap": "^9.2.1",
     "remixicon": "^4.1.0",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zlib": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -65,5 +74,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack": "^5.90.3",
+    "webpack-cli": "^5.1.4"
   }
 }
