--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "npm": "^10.3.0",
     "path": "^0.12.7",
     "path-browserify": "^1.0.1",
+    "pdf-viewer-reactjs": "^2.2.3",
     "querystring": "^0.2.1",
     "querystring-es3": "^0.2.1",
     "react": "^18.2.0",
