--- a/package.json
+++ b/package.json
@@ -84,13 +84,12 @@
     ]
   },
   "devDependencies": {
-<<<<<<< HEAD
-    "nodemon": "^3.0.3"
-=======
+
+    "nodemon": "^3.0.3",
+
     "@babel/plugin-syntax-jsx": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
->>>>>>> e46a885fd9b7e4e0bc2c465ba862912c2d50e9eb
   }
 }
