--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "crypto-browserify": "^3.12.0",
     "express": "^4.18.2",
     "firebase": "^10.8.1",
+    "framer-motion": "^11.0.24",
     "history": "^5.3.0",
     "image-type": "^5.2.0",
     "jsonwebtoken": "^9.0.2",
@@ -46,6 +47,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^6.1.6",
     "react-pdf": "^7.7.0",
     "react-pdf-viewer": "^0.1.0",
     "react-player": "^2.15.1",
@@ -84,11 +86,9 @@
     ]
   },
   "devDependencies": {
-
-    "nodemon": "^3.0.3",
-
     "@babel/plugin-syntax-jsx": "^7.23.3",
     "@babel/preset-react": "^7.23.3",
+    "nodemon": "^3.0.3",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
   }
